Crash when using particles rendered as whole collection #69702

Closed
opened 2019-09-10 08:52:32 +02:00 by Val Acar · 5 comments
Member

{F7729863}System Information
Operating system: Linux-5.2.8-1-MANJARO-x86_64-with-arch-Manjaro-Linux 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.40

Blender Version
Broken: version: 2.81 (sub 5), branch: master, commit date: 2019-09-03 22:58, hash: 1886a2f3f5
Also broken in the final release of 2.80

Short description of error
When making a particle system that is rendered as an instance collection that also enables the "Use Count" option where one object count is set zero, enabling the "Whole Collection" option will cause Blender to crash.

Exact steps for others to reproduce the error

  1. Start with default cube scene
  2. Create two meshes (e.g. a cube and sphere) to be used as particles
  3. Create a collection for the two meshes (in step 2)
  4. Create another mesh (e.g. a plane) to be used for a particle emitter
  5. Create a new particle system
  6. Go to the Render section of the particles, and set Render As to Collection
  7. Add the collection that was created for the two particles to Instance Collection (from step 3)
  8. Enable Use Count and expand it open to see the two particles listed
  9. Change one of the particles to use a count of 0
  10. Enable Whole Collection option, and Blender will crash

I'll also attach a blend file. After opening it, in the properties editor, go to the particles tab, expand the Render section and the Collection section within it. Enable the Whole Collection option and Blender will crash.

Backtrace:

Blender 2.81 (sub 5), Commit date: 2019-09-03 22:58, Hash 1886a2f3f5

bpy.ops.view3d.pastebuffer() # Operator
2 objects pasted # Info
bpy.ops.object.delete(use_global=False) # Operator
Deleted 1 object(s) # Info
bpy.ops.mesh.primitive_plane_add(size=2, enter_editmode=False, location=(0, 0, 0)) # Operator
bpy.context.space_data.context = 'PARTICLES' # Property
bpy.ops.object.particle_system_add() # Operator
bpy.data.window_managers["WinMan"].(null) = "particles" # Property
bpy.ops.object.move_to_collection(collection_index=0, is_new=True, new_collection_name="particles") # Operator
Objects moved to particles # Info
bpy.data.particles["ParticleSettings"].render_type = 'COLLECTION' # Property
bpy.data.particles["ParticleSettings"].instance_collection = bpy.data.collections["particles"] # Property
bpy.data.particles["ParticleSettings"].use_collection_count = True # Property
bpy.data.particles["ParticleSettings"].(null) = 0 # Property

backtrace

/home/mark/Downloads/blender-2.81/blender(BLI_system_backtrace+0x1d) [0x14c530d]
/home/mark/Downloads/blender-2.81/blender() [0x12a9e89]
/usr/lib/libc.so.6(+0x3a7e0) [0x7f03f88ee7e0]
/home/mark/Downloads/blender-2.81/blender(copy_m4_m4+0) [0x14a3d70]
/home/mark/Downloads/blender-2.81/blender() [0x13992a7]
/home/mark/Downloads/blender-2.81/blender(object_duplilist+0xaa) [0x139a86a]
/home/mark/Downloads/blender-2.81/blender() [0x14cd6aa]
/home/mark/Downloads/blender-2.81/blender(DEG_iterator_objects_next+0x1ce) [0x14cd8ce]
/home/mark/Downloads/blender-2.81/blender() [0x417b24d]
/home/mark/Downloads/blender-2.81/blender(ED_info_stats_string+0x5b) [0x417b77b]
/home/mark/Downloads/blender-2.81/blender(Scene_statistics_call+0x21) [0x16277f1]
/home/mark/Downloads/blender-2.81/blender(RNA_function_call+0x12) [0x15766e2]
/home/mark/Downloads/blender-2.81/blender() [0x1541eca]
/home/mark/Downloads/blender-2.81/blender(_PyObject_FastCallKeywords+0x104) [0x18ae0c4]
/home/mark/Downloads/blender-2.81/blender(_PyEval_EvalFrameDefault+0x6e42) [0x12a40c2]
/home/mark/Downloads/blender-2.81/blender() [0x129c1d0]
/home/mark/Downloads/blender-2.81/blender(_PyFunction_FastCallDict+0x2a6) [0x18ad966]
/home/mark/Downloads/blender-2.81/blender() [0x15425ae]
/home/mark/Downloads/blender-2.81/blender() [0x1650597]
/home/mark/Downloads/blender-2.81/blender(ED_region_header_layout+0x145) [0x2eb00f5]
/home/mark/Downloads/blender-2.81/blender(wm_draw_update+0x36d) [0x1674b9d]
/home/mark/Downloads/blender-2.81/blender(WM_main+0x30) [0x16723d0]
/home/mark/Downloads/blender-2.81/blender(main+0x2fe) [0x121642e]
/usr/lib/libc.so.6(__libc_start_main+0xf3) [0x7f03f88daee3]
/home/mark/Downloads/blender-2.81/blender() [0x12a67ac]

{[F7729863](https://archive.blender.org/developer/F7729863/particle-whole-collection-crash.blend)}**System Information** Operating system: Linux-5.2.8-1-MANJARO-x86_64-with-arch-Manjaro-Linux 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.40 **Blender Version** Broken: version: 2.81 (sub 5), branch: master, commit date: 2019-09-03 22:58, hash: `1886a2f3f5` Also broken in the final release of 2.80 **Short description of error** When making a particle system that is rendered as an instance collection that also enables the "Use Count" option where one object count is set zero, enabling the "Whole Collection" option will cause Blender to crash. **Exact steps for others to reproduce the error** 1. Start with default cube scene 2. Create two meshes (e.g. a cube and sphere) to be used as particles 3. Create a collection for the two meshes (in step 2) 4. Create another mesh (e.g. a plane) to be used for a particle emitter 5. Create a new particle system 6. Go to the Render section of the particles, and set Render As to Collection 7. Add the collection that was created for the two particles to Instance Collection (from step 3) 8. Enable Use Count and expand it open to see the two particles listed 9. Change one of the particles to use a count of 0 10. Enable Whole Collection option, and Blender will crash I'll also attach a blend file. After opening it, in the properties editor, go to the particles tab, expand the Render section and the Collection section within it. Enable the Whole Collection option and Blender will crash. Backtrace: # Blender 2.81 (sub 5), Commit date: 2019-09-03 22:58, Hash 1886a2f3f598 bpy.ops.view3d.pastebuffer() # Operator 2 objects pasted # Info bpy.ops.object.delete(use_global=False) # Operator Deleted 1 object(s) # Info bpy.ops.mesh.primitive_plane_add(size=2, enter_editmode=False, location=(0, 0, 0)) # Operator bpy.context.space_data.context = 'PARTICLES' # Property bpy.ops.object.particle_system_add() # Operator bpy.data.window_managers["WinMan"].(null) = "particles" # Property bpy.ops.object.move_to_collection(collection_index=0, is_new=True, new_collection_name="particles") # Operator Objects moved to particles # Info bpy.data.particles["ParticleSettings"].render_type = 'COLLECTION' # Property bpy.data.particles["ParticleSettings"].instance_collection = bpy.data.collections["particles"] # Property bpy.data.particles["ParticleSettings"].use_collection_count = True # Property bpy.data.particles["ParticleSettings"].(null) = 0 # Property # backtrace /home/mark/Downloads/blender-2.81/blender(BLI_system_backtrace+0x1d) [0x14c530d] /home/mark/Downloads/blender-2.81/blender() [0x12a9e89] /usr/lib/libc.so.6(+0x3a7e0) [0x7f03f88ee7e0] /home/mark/Downloads/blender-2.81/blender(copy_m4_m4+0) [0x14a3d70] /home/mark/Downloads/blender-2.81/blender() [0x13992a7] /home/mark/Downloads/blender-2.81/blender(object_duplilist+0xaa) [0x139a86a] /home/mark/Downloads/blender-2.81/blender() [0x14cd6aa] /home/mark/Downloads/blender-2.81/blender(DEG_iterator_objects_next+0x1ce) [0x14cd8ce] /home/mark/Downloads/blender-2.81/blender() [0x417b24d] /home/mark/Downloads/blender-2.81/blender(ED_info_stats_string+0x5b) [0x417b77b] /home/mark/Downloads/blender-2.81/blender(Scene_statistics_call+0x21) [0x16277f1] /home/mark/Downloads/blender-2.81/blender(RNA_function_call+0x12) [0x15766e2] /home/mark/Downloads/blender-2.81/blender() [0x1541eca] /home/mark/Downloads/blender-2.81/blender(_PyObject_FastCallKeywords+0x104) [0x18ae0c4] /home/mark/Downloads/blender-2.81/blender(_PyEval_EvalFrameDefault+0x6e42) [0x12a40c2] /home/mark/Downloads/blender-2.81/blender() [0x129c1d0] /home/mark/Downloads/blender-2.81/blender(_PyFunction_FastCallDict+0x2a6) [0x18ad966] /home/mark/Downloads/blender-2.81/blender() [0x15425ae] /home/mark/Downloads/blender-2.81/blender() [0x1650597] /home/mark/Downloads/blender-2.81/blender(ED_region_header_layout+0x145) [0x2eb00f5] /home/mark/Downloads/blender-2.81/blender(wm_draw_update+0x36d) [0x1674b9d] /home/mark/Downloads/blender-2.81/blender(WM_main+0x30) [0x16723d0] /home/mark/Downloads/blender-2.81/blender(main+0x2fe) [0x121642e] /usr/lib/libc.so.6(__libc_start_main+0xf3) [0x7f03f88daee3] /home/mark/Downloads/blender-2.81/blender() [0x12a67ac]
Author
Member

Added subscriber: @Valacar

Added subscriber: @Valacar

This issue was referenced by a13b1b18de

This issue was referenced by a13b1b18def05a2cc73ab05327412215da632389
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm, 2.79 also crashed here...

Can confirm, 2.79 also crashed here...
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Philipp Oeser self-assigned this 2019-09-10 15:43:06 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69702
No description provided.